# unstructured-analytics

./: .dockerignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  hello.py  pyproject.toml
data/: customers.csv  order_items.csv  orders.csv  products.csv  schema_metadata.json  suppliers.csv
src/: __init__.py  csv_to_english.py  data_loader.py  experiment.py  web_app.py
