[project]
name = "english-is-better"
version = "0.1.0"
description = "Research project comparing LLM performance with different data formats: CSV, CSV with metadata, and natural English sentences"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pandas>=2.2.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "duckdb>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
